# macaron

./: Cargo.toml  README.md
macaron/: Cargo.toml
macaron-impl/: Cargo.toml
macaron-impl/src/: ast.rs  bakery.rs  compiler.rs  defs.rs  diag.rs  fragments.rs  groups.rs  ident.rs  lib.rs  literal.rs  macarons.rs  macros.rs  matches.rs  metagroups.rs  parsing.rs  patterns.rs  rules.rs  scopes.rs  syntax.rs  tokens.rs  trans.rs
macaron-macros/: Cargo.toml  README.md
macaron-macros/src/: lib.rs
macaron-macros/tests/: .#test.rs  test.rs
macaron/src/: lib.rs
macaron/tests/: test.rs
