[package]
name = "macaron-impl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3.2"
quote = "1.0.9"
auto_from = "0.3.0"
proc-macro2 = "1"
smallvec = "1.6.1"

[dependencies.syn]
version = "1.0.71"
default-features = false
features = ["clone-impls", "full", "parsing", "printing"]
